--- a/lineslope.html
+++ b/lineslope.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Complete Guide: Line Equation, Slope (m), and Three Forms of Line Equations</title>
+  <title>Complete Guide: Linear Equation, Slope (m), and Three Forms of Linear Equations</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -87,11 +87,11 @@
 </head>
 <body>
 
-  <h1>Complete Guide: Line Equation, Slope (<em>m</em>), and Three Forms of Line Equations</h1>
+  <h1>Complete Guide: Linear Equation, Slope (<em>m</em>), and Three Forms of Linear Equations</h1>
 
-  <!-- Section 1: Understanding the Straight Line Equation and Slope -->
+  <!-- Section 1: Understanding the Straight Linear Equation and Slope -->
   <section id="line-slope">
-    <h2>Understanding the Straight Line Equation and Slope (<em>m</em>)</h2>
+    <h2>Understanding the Straight Linear Equation and Slope (<em>m</em>)</h2>
 
     <h3>1. Equation of a Straight Line: <code>y = mx + c</code></h3>
     <p>The equation <code>y = mx + c</code> represents any straight line on a 2D graph, where:</p>
@@ -107,14 +107,14 @@
       <li>You can calculate the slope <code>m</code> using the formula:
         <pre><code>m = (y₂ - y₁) / (x₂ - x₁)</code></pre>
       </li>
-      <li>Then, substitute one point into the line equation to find <code>c</code>:
+      <li>Then, substitute one point into the Linear Equation to find <code>c</code>:
         <pre><code>c = y₁ - m * x₁</code></pre>
       </li>
     </ul>
 
     <h3>3. Summary</h3>
     <blockquote>
-      Without two points, you cannot draw a unique line. Two points allow you to find the slope and y-intercept, so you can write the line equation <code>y = mx + c</code>.
+      Without two points, you cannot draw a unique line. Two points allow you to find the slope and y-intercept, so you can write the Linear Equation <code>y = mx + c</code>.
     </blockquote>
 
     <h3>4. Understanding Slope (<em>m</em>) — Simple Explanation</h3>
@@ -183,9 +183,9 @@
     <p>Slope <em>m</em> tells us how steep a line is — how much the line goes up or down when you move left or right on the graph.</p>
   </section>
 
-  <!-- Section 2: Understanding the Three Forms of a Line Equation -->
+  <!-- Section 2: Understanding the Three Forms of a Linear Equation -->
   <section id="line-forms">
-    <h2>Understanding the Three Forms of a Line Equation</h2>
+    <h2>Understanding the Three Forms of a Linear Equation</h2>
 
     <h3>Understanding the Line and Slope</h3>
     <p>A <strong>line</strong> in math is a straight path that extends infinitely in both directions.</p>
